--- a/abc_treatmenteffects.tex
+++ b/abc_treatmenteffects.tex
@@ -48,7 +48,7 @@ The University of Chicago}
 \input{sections/0_abstract}
 \end{abstract}
 
-\noindent \textbf{Keywords}: Childcare, early childhood education, gender differences, health, long-term predictions, quality of life, randomized trials, substitution bias \\
+\noindent \textbf{Keywords}: Gender differences, childcare, early childhood education, health, randomized trials, substitution bias \\
 \noindent \textbf{JEL codes}: J13, I28, C93\\
 
 
@@ -72,8 +72,6 @@ Phone: 734-277-7379                                    &  \\
 Email: aziff@uchicago.edu                     &  \\
 
 \end{tabular}
-
-\textbf{[JJH: (1) Please align the appendices and text (make sure references are correct); (2) App C \& E seem to cover same stuff. Please be careful; (3) Internal vs external locus of control.][(1) We rearranged the appendices to be more logical and double checked the references. Please note some of the lettering of the appendices changed. Everything is consistent and correctly referenced throughout. (2) We fixed any overlap. (3) We clarify the locus of control below to address this confusion.]}
 
 \clearpage
 
