--- a/sections/2_data.tex
+++ b/sections/2_data.tex
@@ -1,4 +1,4 @@
-We analyze a combined sample of the two closely related programs. Table~\ref{tab:abc-care-characteristics} summarizes their characteristics. Both interventions were implemented by researchers at the Frank Porter Graham Center at the University of North Carolina, Chapel Hill and targeted children from disadvantaged families in the Chapel Hill area. ABC had four cohorts born between 1972 and 1977, and CARE had two cohorts born between 1978 and 1980. Eligibility was determined on the basis of the High Risk Index (HRI) developed for ABC and adapted for CARE.\footnote{See \citet{Campbell_Wasik_etal_2008_ECRQ}.} Components of the HRI include father's presence, parental employment, and participation in welfare.\footnote{See Appendix~\ref{app:eligibility-pop} for the full list of the determinants of HRI \citep{Ramey_Smith_1977_AJMD, Wasik_Ramey_etal_1990_CD, Ramey_Campbell_1991_childreninpoverty}.}
+We analyze a combined sample of the two closely related programs previously described: ABC/CARE. Table~\ref{tab:abc-care-characteristics} summarizes their characteristics. Both interventions were implemented by researchers at the Frank Porter Graham Center at the University of North Carolina, Chapel Hill and targeted children from disadvantaged families in the Chapel Hill area. ABC had four cohorts born between 1972 and 1977, and CARE had two cohorts born between 1978 and 1980. Eligibility was determined on the basis of the High Risk Index (HRI) developed for ABC and adapted for CARE.\footnote{See \citet{Campbell_Wasik_etal_2008_ECRQ}.} Components of the HRI include father's presence, parental employment, and participation in welfare.\footnote{See Appendix~\ref{app:eligibility-pop} for the full list of the determinants of HRI \citep{Ramey_Smith_1977_AJMD, Wasik_Ramey_etal_1990_CD, Ramey_Campbell_1991_childreninpoverty}.}
 
 Both interventions involved intensive center-based care for subjects in the treatment group starting at 8 weeks and continuing until age 5 before the children started kindergarten. Treatment-group subjects also received daily health screenings and diapers and formula until 6 months. Control-group families received diapers and formula as well for the same period of time.\footnote{\citet{Wasik_Ramey_etal_1990_CD}.}  After school entry up until age 8, there was an additional component of treatment in which home visitors worked with children and their parents to tutor the children and to encourage families to be involved in their child's schooling.\footnote{In ABC, treatment status of this component was randomized. In CARE, all the subjects who received center-based care also received this school-age component.} We do not analyze this part of the treatment because previous work has found no  statistically significant treatment effects of this component.\footnote{\citet{Campbell_Ramey_etal_2002_ADS,Campbell_Conti_etal_2014_EarlyChildhoodInvestments}.}
 
@@ -18,9 +18,9 @@ Both interventions involved intensive center-based care for subjects in the trea
 
 The pedagogical approach focused on developing language, cognition, and social-emotional skills. During ABC and CARE, the \textit{Learning Games} curriculum was developed and refined.\footnote{\citet{Sparling_Lewis_1979_BOOKLearninggamesFirstThree}.} ABC and CARE subjects engaged with this in addition to other curricula that emphasized child-led learning of skills important for future learning.\footnote{\citet{Conti_etal_2016_LongTermHealth}.}
 
-CARE included an additional arm of treatment. In addition to the services listed above, those in the treatment group received home visiting from birth to age 5. Home visiting consisted of biweekly visits focusing on parental problem-solving skills. There was an additional experimental group that received this home visiting component, but not the center-based care.\footnote{\citet{Wasik_Ramey_etal_1990_CD}.} In light of previous analyses, we do not include this last group in our analysis. The home visiting component had very weak effects.\footnote{\citet{Campbell_Conti_etal_2014_EarlyChildhoodInvestments} test and do not reject the hypothesis of no treatment effects for this additional component of CARE.} This justifies merging the treatment groups of ABC and CARE, even though that of CARE received the additional home-visiting component.\footnote{\citet{ABCCARE_Dataset}.} We henceforth analyze the samples so generated as coming from a single ABC/CARE program.
+CARE included an additional arm of treatment. Besides the services previously described, those in the treatment group also received home visiting from birth to age 5. Home visiting consisted of biweekly visits focusing on parental problem-solving skills. There was, in addition, an experimental group that received only this home visiting component, but not center-based care.\footnote{\citet{Wasik_Ramey_etal_1990_CD}.} In light of previous analyses, we drop this last group from our analysis. The home visiting component had very weak estimated effects.\footnote{\citet{Campbell_Conti_etal_2014_EarlyChildhoodInvestments} test and do not reject the hypothesis of no treatment effects for this additional component of CARE.} This justifies merging the treatment groups of ABC and CARE, even though that of CARE received the additional home-visiting component.\footnote{\citet{ABCCARE_Dataset}.} We henceforth analyze the samples so generated as coming from a single ABC/CARE program.
 
-Figure~\ref{fig:family-over-time} presents one aspect of family disadvantage.  The figure shows the presence of the father at home and its evolution over the early life of the child. More fathers are present in the controls. The level in the treatment group is less precipitous for males. In both categories, the proportion of fathers present, conditional being present at birth, remains roughly stable.\footnote{For a more detailed description of the sample's disadvantage, see Appendix~\ref{app:eligibility-pop}.}
+Figure~\ref{fig:family-over-time} presents one aspect of family disadvantage.  The figure shows the presence of the father at home and its evolution over the early life of the child. More fathers are present among the controls. The level in the treatment group is lower and the decline in the level is less precipitous for males. In both categories, the proportion of fathers present, conditional being present at birth, remains roughly stable.\footnote{For a more detailed description of the sample's disadvantage, see Appendix~\ref{app:eligibility-pop}.}
 
 \begin{figure}[H]
 \begin{center}
